--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
-<!-- =========
-
-	Template Name: Play
-	Author: UIdeck
-	Author URI: https://uideck.com/
-	Support: https://uideck.com/support/
-	Version: 1.1
-
-========== -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Free Startup and SaaS Landing Page Template by UIdeck</title>
+    <title>ML Series - Wayanad House</title>
 
-    <!-- Primary Meta Tags -->
-<meta name="title" content="Play - Free Open Source HTML Bootstrap Template by UIdeck">
-<meta name="description" content="Play - Free Open Source HTML Bootstrap Template by UIdeck Team">
+<meta name="title" content="ML Series - Wayanad House">
+<meta name="description" content="Welcome to Wayanad House">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -144,7 +133,7 @@
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <h1 class="ud-hero-title">
-                Open-Source Web Template for SaaS, Startup, Apps, and More
+                Website is under construction - dummy template
               </h1>
               <p class="ud-hero-desc">
                 Multidisciplinary Web Template Built with Your Favourite
