--- a/404.html
+++ b/404.html
@@ -1,29 +1,23 @@
-<!-- =========
-
-	Template Name: Play
-	Author: UIdeck
-	Author URI: https://uideck.com/
-	Support: https://uideck.com/support/
-	Version: 1.1
-
-========== -->
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play | Open source Project by UIdeck</title>
-
-    <!--====== Favicon Icon ======-->
-    <link
-      rel="shortcut icon"
-      href="assets/images/favicon.svg"
-      type="image/svg"
-    />
-
-    <!-- ===== All CSS files ===== -->
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>ML Series - Wayanad House</title>
+<meta name="title" content="ML Series - Wayanad House">
+<meta name="description" content="Welcome to Wayanad House">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://wayanadiitm.github.io/ml/">
+<meta property="og:title" content="ML Series - Wayanad House">
+<meta property="og:description" content="ML Series is an initiative by the Wayanad House">
+<meta property="og:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://wayanadiitm.github.io/ml/">
+<meta property="twitter:title" content="ML Series - Wayanad House">
+<meta property="twitter:description" content="ML Series is an initiative by the Wayanad House">
+<meta property="twitter:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
+<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"/>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/lineicons.css" />
@@ -119,20 +113,6 @@
     </header>
     <!-- ====== Header End ====== -->
 
-    <!-- ====== Banner Start ====== -->
-    <section class="ud-page-banner">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-banner-content">
-              <h1>404 Page</h1>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== Banner End ====== -->
-
     <!-- ====== Error 404 Start ====== -->
     <section class="ud-404">
       <div class="container">
@@ -140,19 +120,13 @@
           <div class="col-lg-12">
             <div class="ud-404-wrapper">
               <div class="ud-404-content">
-                <h2 class="ud-404-title">404 - We couldn't find that page.</h2>
+                <h2 class="ud-404-title">Oops! Seems you've lost your way</h2>
                 <h5 class="ud-404-subtitle">
                   Maybe you can find what you need here?
                 </h5>
                 <ul class="ud-404-links">
                   <li>
-                    <a href="javascript:void(0)">Home</a>
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)">Support</a>
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)">Latest News</a>
+                    <a href="/">Home Page</a>
                   </li>
                 </ul>
               </div>
