--- a/index.html
+++ b/index.html
@@ -869,8 +869,7 @@
                   </div>
                   <div class="ud-info-meta">
                     <h5>How Can We Help?</h5>
-                    <p>info@yourdomain.com</p>
-                    <p>contact@yourdomain.com</p>
+                    <p>wayanadevents@ds.study.iitm.ac.in</p>
                   </div>
                 </div>
               </div>
@@ -944,9 +943,9 @@
           <div class="row">
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
-                <a href="/" class="ud-footer-logo">
+                <span class="ud-footer-logo">
                   ML Series, Wayanad House
-                </a>
+                </span>
                 <p class="ud-widget-desc">
                   description
                 </p>
@@ -963,7 +962,7 @@
                   </li>
                   <li>
                     <a href="https://www.youtube.com/@wayanadhouseiitm" target="_blank">
-                      <i class="lni lni-youtube-filled"></i>
+                      <i class="lni lni-you-tube-filled"></i>
                     </a>
                   </li>
                   <li>
