--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="row">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand" href="index.html">
-                <img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" alt="Logo" />
+              <a class="navbar-brand" href="/">
+                <img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="90" width="90" alt="Logo" />
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
