--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
             <div class="ud-single-team wow fadeInUp" data-wow-delay=".2s">
               <div class="ud-team-image-wrapper">
                 <div class="ud-team-image">
-                  <img src="assets/images/team/team-03.png" alt="team" />
+                  <img src="https://wayanadiitm.github.io/contribute/storage/pfp1.PNG" alt="team" />
                 </div>
 
                 <img
