--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="row">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand" href="/">
-                <img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="90" width="90" alt="Logo" />
+              <a class="navbar-brand" href="/ml">
+                <img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="70" width="70"/>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -657,7 +657,7 @@
             <div class="ud-single-team wow fadeInUp" data-wow-delay=".2s">
               <div class="ud-team-image-wrapper">
                 <div class="ud-team-image">
-                  <img src="https://wayanadiitm.github.io/contribute/storage/pfp1.PNG" alt="team" />
+                  <img src="https://wayanadiitm.github.io/contribute/storage/pfp1.PNG" height="231" width="231" alt="team" />
                 </div>
 
                 <img
