--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="/ml">
-                <img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="70" width="70"/>
+                <img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="50" width="50"/>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -657,7 +657,7 @@
             <div class="ud-single-team wow fadeInUp" data-wow-delay=".2s">
               <div class="ud-team-image-wrapper">
                 <div class="ud-team-image">
-                  <img src="https://wayanadiitm.github.io/contribute/storage/pfp1.PNG" height="231" width="231" alt="team" />
+                  <img src="assets/images/team/team-01.png" alt="team" />
                 </div>
 
                 <img
@@ -759,7 +759,7 @@
                   </div>
                   <div class="ud-info-meta">
                     <h5>Get in Touch</h5>
-                    <p>Wayanad House, IITM BS Program</p>
+                    <p>Wayanad House, IITM BS Program<br>wayanad-sec@ds.study.iitm.ac.in</p>
                   </div>
                 </div>
                 <div class="ud-single-info">
@@ -768,7 +768,7 @@
                   </div>
                   <div class="ud-info-meta">
                     <h5>How Can We Help?</h5>
-                    <p>wayanadevents@ds.study.iitm.ac.in</p>
+                    <p>wayanad-ml@ds.study.iitm.ac.in</p>
                   </div>
                 </div>
               </div>
@@ -834,24 +834,17 @@
                     <a href="javascript:void(0)">Home</a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)">Features</a>
-                  </li>
-                  <li>
                     <a href="javascript:void(0)">About</a>
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)">Testimonial</a>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
               <div class="ud-widget">
-                <h5 class="ud-widget-title">Features</h5>
+                <h5 class="ud-widget-title"></h5>
+                <p>Disclaimer - This portal is hosted solely for the convenience of the student community, and the institute or IITM BS program does not endorse or assume responsibility for the content, products, or services provided here. Neither the institute nor the initiative members or house council or developer will be responsible for any issues arising if any from using this site. Accessing this site, you by-default agree to all TnCs.</p>
                 <ul class="ud-widget-links">
-                  <li>
-                    <a href="javascript:void(0)">How it works</a>
-                  </li>
+                 
                 </ul>
               </div>
             </div>
@@ -865,7 +858,7 @@
           <div class="row">
             <div class="col-md-8">
               <ul class="ud-footer-bottom-left">
-                &copy; 2023 Wayanad Team 
+                &copy; Wayanad House ML-Series Team
                 <!--<li>
                   <a href="javascript:void(0)"></a>
                 </li>-->
