--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </li>
                 <li>
                   <a href="" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
-                    Learn More <i class="lni lni-arrow-right"></i>
+                    Dive into ML journey <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
               </ul>
@@ -768,7 +768,7 @@
                   </div>
                   <div class="ud-info-meta">
                     <h5>How Can We Help?</h5>
-                    <p>wayanad-ml@ds.study.iitm.ac.in</p>
+                    <p>Our mailing list:<br>wayanad-ml@ds.study.iitm.ac.in</p>
                   </div>
                 </div>
               </div>
@@ -839,10 +839,10 @@
                 </ul>
               </div>
             </div>
-            <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
               <div class="ud-widget">
                 <h5 class="ud-widget-title"></h5>
-                <p>Disclaimer - This portal is hosted solely for the convenience of the student community, and the institute or IITM BS program does not endorse or assume responsibility for the content, products, or services provided here. Neither the institute nor the initiative members or house council or developer will be responsible for any issues arising if any from using this site. Accessing this site, you by-default agree to all TnCs.</p>
+                <p><small>Disclaimer - This portal is hosted solely for the convenience of the student community, and the institute or IITM BS program does not endorse or assume responsibility for the content, products, or services provided here. Neither the institute nor the initiative members or house council or developer will be responsible for any issues arising if any from using this site. Accessing this site, you by-default agree to all TnCs.</small></p>
                 <ul class="ud-widget-links">
                  
                 </ul>
