--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <h1 class="ud-hero-title">
-                Website is under construction - dummy template
+                Let's dive into the awesome ML Journey with
               </h1>
               <p class="ud-hero-desc">
-                Wayanad House welcomes you
+                the Wayanad House ML series initiative
               </p>
               <ul class="ud-hero-buttons">
                 <li>
@@ -106,7 +106,7 @@
                 </li>
                 <li>
                   <a href="" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
-                    Dive into ML journey <i class="lni lni-arrow-right"></i>
+                    Learn more ... <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
               </ul>
