--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
                     <a href="javascript:void(0)"> Events </a>
                     <ul class="ud-submenu">
                       <li class="ud-submenu-item">
-                        <a href="about.html" class="ud-submenu-link">
+                        <a href="" class="ud-submenu-link">
                           Logic LooM
                         </a>
                       </li>
                       <li class="ud-submenu-item">
-                        <a href="pricing.html" class="ud-submenu-link">
+                        <a href="" class="ud-submenu-link">
                           ML Challenge
                         </a>
                       </li>
                       <li class="ud-submenu-item">
-                        <a href="contact.html" class="ud-submenu-link">
+                        <a href="" class="ud-submenu-link">
                           Pythonic Sprint
                         </a>
                       </li>
@@ -106,7 +106,7 @@
                 </li>
                 <li>
                   <a href="" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-link-btn">
-                    Learn more ... <i class="lni lni-arrow-right"></i>
+                    Learn more <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
               </ul>
@@ -814,7 +814,7 @@
                   </li>
                   <li>
                     <a href="https://www.youtube.com/@wayanadhouseiitm" target="_blank">
-                      <i class="lni lni-you-tube-filled"></i>
+                      <i class="lni lni-youtube-original"></i>
                     </a>
                   </li>
                   <li>
@@ -839,7 +839,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+            <div class="col-xl-7 col-lg-6 col-md-6 col-sm-12">
               <div class="ud-widget">
                 <h5 class="ud-widget-title"></h5>
                 <p><small>Disclaimer - This portal is hosted solely for the convenience of the student community, and the institute or IITM BS program does not endorse or assume responsibility for the content, products, or services provided here. Neither the institute nor the initiative members or house council or developer will be responsible for any issues arising if any from using this site. Accessing this site, you by-default agree to all TnCs.</small></p>
