--- a/index.html
+++ b/index.html
@@ -244,10 +244,9 @@
           <div class="col-lg-12">
             <div class="ud-section-title text-center mx-auto">
               <span>FAQ</span>
-              <h2>Any Questions? Answered</h2>
+              <h2>Any Questions?</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                We've them answered
               </p>
             </div>
           </div>
@@ -408,7 +407,7 @@
           <div class="col-lg-12">
             <div class="ud-section-title mx-auto text-center">
               <span>Testimonials</span>
-              <h2>What our Customers Says</h2>
+              <h2>What our Participants Say</h2>
               <p>
                 There are many variations of passages of Lorem Ipsum available
                 but the majority have suffered alteration in some form.
@@ -519,33 +518,9 @@
           <div class="col-lg-12">
             <div class="ud-brands wow fadeInUp" data-wow-delay=".2s">
               <div class="ud-title">
-                <h6>Trusted and Used by</h6>
+                <h6>Trusted by</h6>
               </div>
               <div class="ud-brands-logo">
-                <div class="ud-single-logo">
-                  <img src="assets/images/brands/ayroui.svg" alt="ayroui" />
-                </div>
-                <div class="ud-single-logo">
-                  <img src="assets/images/brands/uideck.svg" alt="uideck" />
-                </div>
-                <div class="ud-single-logo">
-                  <img
-                    src="assets/images/brands/graygrids.svg"
-                    alt="graygrids"
-                  />
-                </div>
-                <div class="ud-single-logo">
-                  <img
-                    src="assets/images/brands/lineicons.svg"
-                    alt="lineicons"
-                  />
-                </div>
-                <div class="ud-single-logo">
-                  <img
-                    src="assets/images/brands/ecommerce-html.svg"
-                    alt="ecommerce-html"
-                  />
-                </div>
               </div>
             </div>
           </div>
@@ -841,7 +816,7 @@
             </div>
             <div class="col-xl-7 col-lg-6 col-md-6 col-sm-12">
               <div class="ud-widget">
-                <h5 class="ud-widget-title"></h5>
+                <h5 class="ud-widget-title">TnCs</h5>
                 <p><small>Disclaimer - This portal is hosted solely for the convenience of the student community, and the institute or IITM BS program does not endorse or assume responsibility for the content, products, or services provided here. Neither the institute nor the initiative members or house council or developer will be responsible for any issues arising if any from using this site. Accessing this site, you by-default agree to all TnCs.</small></p>
                 <ul class="ud-widget-links">
                  
