--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-section-title">
-              <span>Features</span>
-              <h2>Main Features of Play</h2>
+              <span>Why?</span>
+              <h2>Lets make DATA <img src="assets/images/ki.PNG"> more FUN!</h2>
               <p>
                 There are many variations of passages of Lorem Ipsum available
                 but the majority have suffered alteration in some form.
