--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                   ML Series, Wayanad House
                 </span>
                 <p class="ud-widget-desc">
-                  description
+                  Description
                 </p>
                 <ul class="ud-widget-socials">
                   <li>
@@ -789,7 +789,7 @@
                   </li>
                   <li>
                     <a href="https://www.youtube.com/@wayanadhouseiitm" target="_blank">
-                      <i class="lni lni-youtube-original"></i>
+                      <i class="lni lni-youtube"></i>
                     </a>
                   </li>
                   <li>
